force-app/main/default/objects/OrgChartPlus__ADP_OrgChartRelationship__c/OrgChartPlus__ADP_OrgChartRelationship__c.object-meta.xml
<CustomObject>
    <description>Chart specific contact relationships</description>
    <label>ADP OrgChart Relationship</label>
    <nameField>
        <displayFormat>OC-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADP OrgChart Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>