force-app/main/default/objects/OrgChartPlus__ADP_OrgChartRelationship__c/fields/OrgChartPlus__ChildEntity__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ChildEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Entity</label>
    <referenceTo>OrgChartPlus__ADP_OrgChartEntity__c</referenceTo>
    <relationshipLabel>ADP OrgChart Relationships</relationshipLabel>
    <relationshipName>OrgChart_Child_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>