force-app/main/default/objects/OrgChartPlus__ADP_OrgChartRelationship__c/fields/OrgChartPlus__ChildTeamMember__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ChildTeamMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child TeamMember</label>
    <referenceTo>OrgChartPlus__ADP_OrgChartTeamMember__c</referenceTo>
    <relationshipLabel>ADP OrgChart Relationships</relationshipLabel>
    <relationshipName>ADP_OrgChart_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>