force-app/main/default/objects/OrgChartPlus__ADP_OrgChartRelationship__c/fields/OrgChartPlus__OrgChart__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__OrgChart__c</fullName>
    <label>OrgChart</label>
    <referenceTo>OrgChartPlus__ADP_OrgChart__c</referenceTo>
    <relationshipLabel>ADP OrgChart Relationships</relationshipLabel>
    <relationshipName>ADP_OrgChartRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>