force-app/main/default/objects/OrgChartPlus__ADP_OrgChartRelationship__c/fields/OrgChartPlus__ParentEntity__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ParentEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Entity</label>
    <referenceTo>OrgChartPlus__ADP_OrgChartEntity__c</referenceTo>
    <relationshipLabel>ADP OrgChart Relationships (Parent Entity)</relationshipLabel>
    <relationshipName>OrgChart_Parent_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>