force-app/main/default/objects/OrgChartPlus__ADP_OrgChartRelationship__c/fields/OrgChartPlus__ParentTeamMember__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ParentTeamMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent TeamMember</label>
    <referenceTo>OrgChartPlus__ADP_OrgChartTeamMember__c</referenceTo>
    <relationshipLabel>ADP OrgChart Relationships (Parent TeamMember)</relationshipLabel>
    <relationshipName>ADP_OrgChart_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>